--- a/CSharp.MSTest.Base.Tests/CSharp.MSTest.Base.Tests.csproj
+++ b/CSharp.MSTest.Base.Tests/CSharp.MSTest.Base.Tests.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FakeTests.cs" />
     <Compile Include="TestExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
