Fakes for: Zip Code SSN BirthDate FullName MiddleInitial MiddleName

--- a/CSharp.MSTest.Base/CSharp.MSTest.Base.csproj
+++ b/CSharp.MSTest.Base/CSharp.MSTest.Base.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Content Include="FakeData\FirstNames.txt" />
     <Content Include="FakeData\LastNames.txt" />
+    <Content Include="FakeData\USStateAbbreviations.txt" />
     <Content Include="ToDo.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
