Changed address method to use address from text file

--- a/CSharp.MSTest.Base/CSharp.MSTest.Base.csproj
+++ b/CSharp.MSTest.Base/CSharp.MSTest.Base.csproj
@@ -57,6 +57,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Addresses.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <Content Include="FakeData\FirstNames.txt" />
     <Content Include="FakeData\LastNames.txt" />
     <Content Include="FakeData\USStateAbbreviations.txt" />
